--- a/style.css
+++ b/style.css
@@ -1,2 +1,2 @@
-body { background-image: url("myBackground.jpg");
+body { background-image: url("https://github.com/owen-madsen/owen-madsen.github.io/blob/master/myBackground.jpg");
 }
