--- a/style.css
+++ b/style.css
@@ -1,2 +1,4 @@
 body { background-image: url("https://github.com/owen-madsen/owen-madsen.github.io/blob/master/myBackground.jpg");
 }
+
+#nav-table { width: 800px; }
