--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-#body { background-image: url("https://github.com/owen-madsen/owen-madsen.github.io/blob/master/myBackground.jpg");
-}
+#body { background-color: grey;}
 
 #nav-table { width: 800px; }
