--- a/style.css
+++ b/style.css
@@ -1,3 +1,3 @@
-body { background-image: url("myBackground.jpg");
+body { background-image: url("myBackground.jpg");}
 
 #nav-table { width: 800px; }
