--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
-body { background-image: url("myBackground.jpg");}
-
+body { background-image: url("myBackground.jpg");
+       color: white;}
+h1 { color:white;}
+p {color:white;}
 #nav-table { width: 800px; }
